src/components/TimeLine/TimeLine.scss
// [id$="layout-center"],
[id*="layout-left"],
[id*="layout-right"] {
  .tl-slide-content {
    display: flex !important;
  }
}

[id*="layout-right"] {
  .tl-media {
    order: 1;
  }

  .tl-text {
    order: 2;
  }
}

[id*="layout-left"] {
  .tl-text {
    order: 1;
  }

  .tl-media {
    order: 2;
  }
}

// [id$="layout-center"] {
//   background-color: tomato;

//   .tl-media {
//     order: 1;
//   }

//   .tl-text {
//     order: 2;
//   }
// }

[id*="color-black"] {
  .tl-text p,
  &.tl-full-color-background h2,
  &.tl-full-color-background .tl-text .tl-headline-date,
  &.tl-full-color-background .tl-text h3.tl-headline-date {
    color: #000 !important;
    text-shadow: none !important;
  }
}

.h5p-tl-tags-container {
  margin-top: 0.5rem;
  margin-bottom: 0.75rem;
}

.h5p-timeline--indexed {
  .tl-headline-date,
  .tl-timeaxis {
    display: none !important;
  }
}

.h5p-timeline-wrapper {
  height: 45rem;
  max-height: 95vh;
  max-width: 100%;
}

.tl-timeline {
  height: 100%;
}

.tl-slide .tl-slide-content-container .tl-slide-content .tl-media {
  margin-bottom: 0 !important;
  margin-top: 0 !important;
}

.tl-slide .tl-slide-content-container .tl-slide-content .tl-text {
  margin-bottom: auto !important;
  margin-top: auto !important;
}

.tl-slide-content {
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.tl-timeaxis
  .tl-timeaxis-content-container
  .tl-timeaxis-minor
  .tl-timeaxis-tick {
  color: #545454;
}

.tl-timeaxis
  .tl-timeaxis-content-container
  .tl-timeaxis-major
  .tl-timeaxis-tick {
  color: #333;
}

.tl-timeera
  .tl-timeera-content-container
  .tl-timeera-content
  .tl-timeera-text
  h2.tl-headline {
  color: #333;
}

.tl-timeera.tl-timeera-color0 .tl-timeera-background {
  background-color: #b4d0b9;
}

.tl-timeera.tl-timeera-color1 .tl-timeera-background {
  background-color: #adcfdc;
}

.tl-timeera.tl-timeera-color2 .tl-timeera-background {
  background-color: #f5e6af;
}

.tl-timeera.tl-timeera-color3 .tl-timeera-background {
  background-color: #ecc0a7;
}

.tl-timeera.tl-timeera-color4 .tl-timeera-background {
  background-color: #e4e2e0;
}

.tl-timeera.tl-timeera-color5 .tl-timeera-background {
  background-color: #dec69a;
}

